# Multi-LLM-interface-backup

./: .gitignore
backend/: broadcast_orchestrator.py  fetch_models.py  knowledge_manager.py  knowledge_vault.json  main.py  models.py  pyproject.toml  requirements.txt  run_local_test.ps1  session_manager.py  test_app.py  test_endpoint.py  test_fresh_chat.py  test_gemini.py  test_gemini2.py  test_knowledge_vault.py  test_memory.py  test_pdf.py  test_private_rag.py  test_router.py  test_search_endpoint.py  test_smart_search.py  test_vision_bridge.py  test_web_search.py  web_search.py
backend/.session_files/0anev9qrg/: metadata.json
backend/.session_files/17oic06tk/: metadata.json
backend/.session_files/20axbsnrd/: metadata.json
backend/.session_files/2xz3c0r1r/: metadata.json
backend/.session_files/3d81upuuz/: metadata.json
backend/.session_files/56n8jubez/: metadata.json
backend/.session_files/7g24b485l/: metadata.json
backend/.session_files/9ue1fe1at/: f73e8010-b32e-44b8-9161-91ee82f4c06f  metadata.json
backend/.session_files/a2fniqelc/: metadata.json
backend/.session_files/ck28766kr/: metadata.json
backend/.session_files/df2q6yysa/: metadata.json
backend/.session_files/e00ztr638/: metadata.json
backend/.session_files/ghhsamzzk/: metadata.json
backend/.session_files/imn97goqf/: metadata.json
backend/.session_files/izzxxwd2e/: metadata.json
backend/.session_files/j1et5d494/: metadata.json
backend/adapters/: base.py  google_adapter.py  groq_adapter.py  litellm_adapter.py  registry.py
backend/rag/: document_processor.py  vector_store.py
(+34 files in other folders)
